--- a/Sources/Actions_scripts/HTML_Export_CSS.css
+++ b/Sources/Actions_scripts/HTML_Export_CSS.css
@@ -1,128 +1,104 @@
-body
-{
+body {
 	font-family: Arial;
 	font-size: 8pt;
 }
 
-table
-{
+table {
 	border: 0px solid #e3e3e3;
 	border-collapse: collapse;
 }
 
-tr:nth-child(even) 
-{
-	background: #f5f5f5;	
+tr:nth-child(even) {
+	background: #f5f5f5;
 }
 
-tr:nth-child(odd) 
-{
-	background: #f1f1f1;	
+tr:nth-child(odd) {
+	background: #f1f1f1;
 }
 
-
-th, td 
-{
+th, td {
 	padding: 7px;
 }
 
-
 .noBorder {
-    border:none !important;
+	border: none !important;
 }
 
-tr:hover
-{
-	background:#A1E5DC;
+tr:hover {
+	background: #A1E5DC;
 }
 
-tr
-{
+tr {
 	-webkit-transition: color 1s ease;
 	-ms-transition: color 1s ease;
 	-moz-transition: color 1s ease;
-	-o-transition: color 1s ease;	
- }
- 
- 
-th
-{
+	-o-transition: color 1s ease;
+}
+
+th {
 	padding: 3px;
 	background: #2b5797;
 	color: white;
 	font-size: 13px;
-	text-align:center;
-	border: 1px solid #e3e3e3;		
+	text-align: center;
+	border: 1px solid #e3e3e3;
 }
 
-
-td
-{
+td {
 	border: 1px solid #e3e3e3;
 	padding: 5px;
 	font-size: 11px;
-	text-align:left;
+	text-align: left;
 }
 
-
-.New_object
-{
-	color:#01B0F0;
-	font-weight:bold;
-	font-size:17px;
+.New_object {
+	color: #01B0F0;
+	font-weight: bold;
+	font-size: 17px;
 }
 
-.running
-{
+.running {
 	color: green;
-	font-weight:bold;
-	
-}
-
-.stopped
-{
-	color: red;
-	font-weight:bold;
-	
-}
-
-.checkname
-{
 	font-weight: bold;
 }
-.rowOne
-{
-	background: #f5f5f5;	
+
+.stopped {
+	color: red;
+	font-weight: bold;
 }
-.rowTwo
-{
+
+.checkname {
+	font-weight: bold;
+}
+
+.rowOne {
+	background: #f5f5f5;
+}
+
+.rowTwo {
 	background: #f1f1f1
 }
-.conform
-{
+
+.conform {
 	color: green;
 	text-align: center;
 }
-.notconform
-{
+
+.notconform {
 	color: red;
 	text-align: center;
 }
 
-.titre_list
-{
+.titre_list {
 	color: #2d89ef;
-	font-weight:bold;
-	font-size:16pt;
+	font-weight: bold;
+	font-size: 16pt;
 	font-family: Segoe UI light, Arial;
 }
 
-.subtitle
-{
+.subtitle {
 	font-family: Segoe UI Light, Arial;
-	font-weight:bold;	
+	font-weight: bold;
 	font-size: 11pt;
-	color:#00a300;
+	color: #00a300;
 }
-
-
