--- a/Sources/Interface/AboutMyDevice_Interface/AboutMyDevice_Interface/MainWindow.xaml
+++ b/Sources/Interface/AboutMyDevice_Interface/AboutMyDevice_Interface/MainWindow.xaml
@@ -1,13 +1,39 @@
-﻿<Window x:Class="AboutMyDevice_Interface.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AboutMyDevice_Interface"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="325,170,0,0" VerticalAlignment="Top" Click="OnClick"/>
+﻿<Controls:MetroWindow x:Class="AboutMyDevice_Interface.MainWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                      Title="MahApps.Metro Themes"
+                      Width="600"
+                      Height="250"
+                      TitleCharacterCasing="Normal"
+                      GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
+                      RenderOptions.ClearTypeHint="Enabled"
+                      ResizeMode="CanResizeWithGrip"
+                      TextOptions.TextFormattingMode="Display"
+                      WindowStartupLocation="CenterScreen">
 
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Click="ChangeAppStyleButtonClick">
+                <StackPanel Orientation="Horizontal">
+                    <iconPacks:PackIconModern Width="24" Height="24" Kind="FoodCupcake" />
+                    <TextBlock Margin="4 0 0 0" VerticalAlignment="Center" Text="Change App Style..." />
+                </StackPanel>
+            </Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
+    <Grid>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock FontSize="32"
+                       FontWeight="Light"
+                       Text="Welcome to the MahApps.Metro World..." />
+            <Border Height="5" Background="{DynamicResource MahApps.Brushes.Accent}" />
+
+            <Controls:MetroProgressBar x:Name="theProgressBar" Minimum="0" Maximum="1000" Value="300" Height="25" Margin="0 10" />
+            <ProgressBar x:Name="theOtherProgressBar" Minimum="0" Maximum="1000" Value="600" Height="25" Margin="0 5" />
+        </StackPanel>
     </Grid>
-</Window>
+
+</Controls:MetroWindow>
