--- a/Sources/Interface/AboutMyDevice_Interface/AboutMyDevice_Interface/Password_AD.xaml
+++ b/Sources/Interface/AboutMyDevice_Interface/AboutMyDevice_Interface/Password_AD.xaml
@@ -1,53 +1,180 @@
 ﻿<Controls:MetroWindow x:Class="AboutMyDevice_Interface.Password_AD"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AboutMyDevice_Interface"
-    xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                      xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+                      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                      Title="Password_AD"
+                      Width="290"
+                      Height="285"
+                      TitleCharacterCasing="Normal"
                       GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
                       RenderOptions.ClearTypeHint="Enabled"
-                      ResizeMode="CanResizeWithGrip"
+                      ResizeMode="CanMinimize"
                       TextOptions.TextFormattingMode="Display"
-    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        mc:Ignorable="d"
-        Title="Password_AD" Height="250" Width="600" WindowStartupLocation="CenterScreen">
+                      WindowStartupLocation="CenterScreen"
+                      Topmost="True">
 
+    <!--ResizeMode="CanResizeWithGrip"-->
+    
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Red.xaml" />
+                <!--<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Red.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
 
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
-            <!--<Button Name="ChangeTheme" Click="Click_ChangeTheme">
-                <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconOcticons Kind="Paintcan" Margin="0,5,0,0" ToolTip="Change the main theme of this tool" />
-                </StackPanel>
-            </Button>-->
             <Button Click="ChangeAppStyleButtonClick">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconModern Width="24" Height="24" Kind="FoodCupcake" />
-                    <TextBlock Margin="4 0 0 0" VerticalAlignment="Center" Text="" />
+                    <iconPacks:PackIconOcticons Kind="Paintcan"
+                                                Width="24"
+                                                Height="24"
+                                                ToolTip="Change the main theme of the application" />
+                    <TextBlock Margin="4 0 0 0"
+                               VerticalAlignment="Center"
+                               Text="" />
                 </StackPanel>
             </Button>
         </Controls:WindowCommands>
     </Controls:MetroWindow.RightWindowCommands>
     <Grid>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock FontSize="32"
-                       FontWeight="Light"
-                       Text="Welcome to the MahApps.Metro World..." />
-            <Border Height="5" Background="{DynamicResource MahApps.Brushes.Accent}" />
+        <StackPanel HorizontalAlignment="Center">
+            <StackPanel Margin="0,5,0,0"
+                        Orientation="Vertical">
+                <GroupBox Header="Type your AD credentials"
+                          Height="135"
+                          Width="270">
+                    <StackPanel HorizontalAlignment="Center"
+                                Orientation="Horizontal">
 
-            <Controls:MetroProgressBar x:Name="theProgressBar" Minimum="0" Maximum="1000" Value="300" Height="25" Margin="0 10" />
-            <ProgressBar x:Name="theOtherProgressBar" Minimum="0" Maximum="1000" Value="600" Height="25" Margin="0 5" />
+                        <StackPanel HorizontalAlignment="Center"
+                                    Orientation="Vertical">
+                            <TextBox Margin="0,0,0,0"
+                                     Name="Typed_User"
+                                     Height="30"
+                                     Width="250"
+                                     Controls:TextBoxHelper.ClearTextButton="{Binding RelativeSource={RelativeSource Self}, Path=(Controls:TextBoxHelper.HasText), Mode=OneWay}"
+                                     Controls:TextBoxHelper.IsWaitingForData="True"
+                                     Controls:TextBoxHelper.Watermark="Type user name"
+                                     FontSize="14" />
+                            <PasswordBox Name="Typed_PWD"
+                                         Width="250"
+                                         Height="30"
+                                         Margin="0,2,0,0"
+                                         Controls:TextBoxHelper.ClearTextButton="{Binding RelativeSource={RelativeSource Self}, Path=(Controls:TextBoxHelper.HasText), Mode=OneWay}"
+                                         Controls:TextBoxHelper.IsWaitingForData="True"
+                                         Controls:TextBoxHelper.Watermark="Type user password"
+                                         FontSize="14" />
+                            <!-- Style="{StaticResource MetroButtonRevealedPasswordBox}" -->
+
+                            <!-- <Button Content="Run the TS" Height="30" Width="250" Margin="5,2,0,0"/>		 -->
+                            <Button x:Name="Enter_TS"
+                                    Content="Proceed"
+                                    HorizontalAlignment="Right"
+                                    Margin="0,3,0,0"
+                                    Width="250"
+                                    Height="30"
+                                    BorderThickness="0" />
+                            <!--
+                                    Foreground="White"
+                                    Background="RoyalBlue"
+                            -->
+
+                        </StackPanel>
+                    </StackPanel>
+                </GroupBox>
+
+
+                <GroupBox Header="Bad password count"
+                          Height="90"
+                          Margin="0,3,0,0"
+                          Width="270">
+                    <StackPanel HorizontalAlignment="Center"
+                                Orientation="Horizontal">
+                        <StackPanel Orientation="Horizontal">
+                            <Button Height="40"
+                                    Width="40"
+                                    x:Name="Lock1"
+                                    BorderThickness="0.7"
+                                    BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                                    Margin="0,0,0,0"
+                                    Style="{DynamicResource SquareButtonStyle}"
+                                    Cursor="Hand">
+                                <iconPacks:PackIconMaterial Name="Password_1"
+                                                            FontWeight="bold"
+                                                            Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                                            Kind="lockoutline"
+                                                            Height="27" />
+                            </Button>
+
+                            <Button Height="40"
+                                    Width="40"
+                                    x:Name="Lock2"
+                                    BorderThickness="0.7"
+                                    BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                                    Margin="5,0,0,0"
+                                    Style="{DynamicResource SquareButtonStyle}"
+                                    Cursor="Hand">
+                                <iconPacks:PackIconMaterial Name="Password_2"
+                                                            FontWeight="bold"
+                                                            Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                                            Kind="lockoutline"
+                                                            Height="27" />
+                            </Button>
+
+                            <Button Height="40"
+                                    Width="40"
+                                    x:Name="Lock3"
+                                    BorderThickness="0.7"
+                                    BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                                    Margin="5,0,0,0"
+                                    Style="{DynamicResource SquareButtonStyle}"
+                                    Cursor="Hand">
+                                <iconPacks:PackIconMaterial Name="Password_3"
+                                                            FontWeight="bold"
+                                                            Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                                            Kind="lockoutline"
+                                                            Height="27" />
+                            </Button>
+
+                            <Button Height="40"
+                                    Width="40"
+                                    x:Name="Lock4"
+                                    BorderThickness="0.7"
+                                    BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                                    Margin="5,0,0,0"
+                                    Style="{DynamicResource SquareButtonStyle}"
+                                    Cursor="Hand">
+                                <iconPacks:PackIconMaterial Name="Password_4"
+                                                            FontWeight="bold"
+                                                            Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                                            Kind="lockoutline"
+                                                            Height="27" />
+                            </Button>
+
+                            <Button Height="40"
+                                    Width="40"
+                                    x:Name="Lock5"
+                                    BorderThickness="0.7"
+                                    BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+                                    Margin="5,0,0,0"
+                                    Style="{DynamicResource SquareButtonStyle}"
+                                    Cursor="Hand">
+                                <iconPacks:PackIconMaterial Name="Password_5"
+                                                            FontWeight="bold"
+                                                            Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                                            Kind="lockoutline"
+                                                            Height="27" />
+                            </Button>
+                        </StackPanel>
+                    </StackPanel>
+                </GroupBox>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Controls:MetroWindow>
