--- a/Sources/Interface/AboutMyDevice_Interface/AboutMyDevice_Interface/App.xaml
+++ b/Sources/Interface/AboutMyDevice_Interface/AboutMyDevice_Interface/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="AboutMyDevice_Interface.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="AboutThisComputer.xaml">
+             StartupUri="AdminPanel.xaml">
     <!--StartupUri="Password_AD.xaml"-->
     <Application.Resources>
         <ResourceDictionary>
